[package]
name = "trading-sdk"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
uuid = { version = "*", features = ["v4"] }
num_enum = "*"
ahash = "*"
slotmap = "*"