[package]
name = "trading-sdk"
version = "0.19.7-rc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
uuid = { version = "*", features = ["v4"] }
num_enum = "*"
ahash = "*"
compact_str = "*"
